Wed Apr  9 15:53:00 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * bin/DDS_Run_Test.pm:

          Changed name and added ProcessFactory.

        * bin/Process.pm:
        * bin/ProcessFactory.pm:

          Split out Process and ProcessFactory.  Process inherits from PerlACE::Process
          ProcessFactory handles creating the correct Process (PerlACE::Process, 
          PerlACE:ProcessVX, or PerlDDS::Process)  RT#12130

        * tests/DCPS/ZeroCopyRead/run_test_coverage.pl:

          Changed for refactoring.

        * bin/Run_Test.pm:

          Removed this file.

Wed Apr  9 14:27:10 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * bin/Process.pm:
        * bin/Run_Test.pm:

          Added perl modules to DDS to handle starting remote processes for VxWorks
          and Test Coverage.  RT#12130

        * tests/DCPS/UnitTests/run_test.pl:

          Cleaned up test.

        * tests/DCPS/UnitTests/run_test_coverage.pl:
        * tests/DCPS/ZeroCopyRead/run_test_coverage.pl:

          Examples of how tests will change to encorporate new perl modules.

Mon Mar 31 18:12:38 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/CompatibilityTest/CompatibilityTest.mpc:
        * tests/DCPS/CompatibilityTest/common.h:
        * tests/DCPS/CompatibilityTest/publisher.cpp:
        * tests/DCPS/CompatibilityTest/subscriber.cpp:

          Cleaning up unneeded dependency on UDP.

        * tests/DCPS/LivelinessTimeout/LivelinessTimeout.mpc:
        * tests/DCPS/LivelinessTimeout/common.h:
        * tests/DCPS/LivelinessTimeout/publisher.cpp:
        * tests/DCPS/LivelinessTimeout/subscriber.cpp:

          Cleaning up unneeded dependency on UDP.

Mon Mar 31 15:59:22 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * AUTHORS:

          Added Brian Johnson of OCI.

        * DDS_TAO.mwc:

          Updated to work with recent changes to the DCPSInfoRepo -- it now uses